<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentVerde">

    <!-- TODO: Update blank fragment layout -->
      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- TITULO DE LA PANTALLA  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/RegistrTxt2"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <!-- LINEAR CON FECHA DE REGISTRO E ICONO DE CALENDARIO  -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- FECHA DE REGISTRO TXT  -->
            <TextView
                android:id="@+id/fechaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FechaRegistro"
                android:textColor="#000000" />

            <!-- IMAGEN CALENDARIO   -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                 /> <!-- android:src="@drawable/calendar_ico"-->


        </androidx.appcompat.widget.LinearLayoutCompat>


        <!-- IMAGEN ADMINISTRADOR  -->


        <!-- CORREO ELECTRONICO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"> <!--app:passwordToggleEnabled="true"-->

            <EditText
                android:id="@+id/PasswordIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  NOMBRE COMPLETO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:inputType="textCapWords|textAutoCorrect"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  APELLIDO COMPLETO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellido"
                android:inputType="textCapWords|textAutoCorrect"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EDAD -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Edad"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/Registrar"
            android:textColor="#000000"

            />


    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</FrameLayout>