<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentRojo">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- TITULO DE LA PANTALLA  -->
        <TextView
            android:text="@string/RegistrTxt"
            android:gravity="center"
            android:textColor="#808080"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <!-- CORREO ELECTRONICO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/CorreoIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <!--app:passwordToggleEnabled="true"-->

            <EditText
                android:id="@+id/PasswordIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/Iniciar_Sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/Iniciar_Sesion"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="#000000"

            />







    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>